Test runs successful

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@ datasets/plots
 datasets/.DS_Store
 datasets/phase_diagrams
 datasets/curated_MPEA_initial_training_hardness_value.csv
+datasets/curated_MPEA_initial_test_hardness_value.csv
 scripts/__pycache__
 scripts/.ipynb_checkpoints
-
+scripts/.ipynb_checkpoints/*
+bo_output
